--- a/AryanITC.Web/Areas/AdminPanel/Views/AboutUs/Index.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/AboutUs/Index.cshtml
@@ -97,7 +97,7 @@
                                             @if (item.AboutUsImage == null)
                                             {
                                                 <td>
-                                                    <img class="thumbnail" src="@(FilePath.AboutUsImage + item.AboutUsImage + "Default.jpg")" style="max-width: 50px" />
+                                                    <img class="thumbnail" src="@(FilePath.AboutUsImage + "Default.jpg")" style="max-width: 50px" />
 
                                                 </td>
                                             }
