--- a/AryanITC.Web/Areas/AdminPanel/Views/Shared/Scripts.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/Shared/Scripts.cshtml
@@ -1,5 +1,5 @@
 ﻿<!-- Jquery Core Js -->
- 
+
 <script src="/Admin/assets/bundles/libscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js ( jquery.v3.2.1, Bootstrap4 js) -->
 <script src="/Admin/assets/bundles/vendorscripts.bundle.js"></script> <!-- slimscroll, waves Scripts Plugin Js -->
 <script src="/Admin/assets/bundles/morrisscripts.bundle.js"></script><!-- Morris Plugin Js -->
@@ -12,4 +12,6 @@
 <script src="/Admin/assets/js/sweetalert2.all.min.js"></script>
 <script src="/scripts/modules.js"></script>
 <script src="/Admin/assets/js/customScript.js"></script>
- 
+<script type="text/javascript" src="Admin/assets/js/farbtastic.js"></script>
+
+
