--- a/AryanITC.Web/Areas/AdminPanel/Views/Shared/Styles.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/Shared/Styles.cshtml
@@ -20,4 +20,6 @@
 <link rel="stylesheet" href="/Admin/assets/css/color_skins.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-tagsinput/1.3.6/jquery.tagsinput.min.css" integrity="sha512-uKwYJOyykD83YchxJbUxxbn8UcKAQBu+1hcLDRKZ9VtWfpMb1iYfJ74/UIjXQXWASwSzulZEC1SFGj+cslZh7Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.css" />
-<link href="/Admin/assets/css/customStyle.css" rel="stylesheet" /> 
+<link href="/Admin/assets/css/customStyle.css" rel="stylesheet" />
+<link rel="stylesheet" href="/Admin/assets/css/farbtastic.css" type="text/css" />
+
