--- a/AryanITC.Web/Areas/AdminPanel/Views/Shared/Scripts.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/Shared/Scripts.cshtml
@@ -1,17 +1,20 @@
 ﻿<!-- Jquery Core Js -->
+<script type="text/javascript" src="/js/farbtastic.js"></script>
+<!--<script src="/Admin/assets/bundles/libscripts.bundle.js"></script>--> <!-- Lib Scripts Plugin Js ( jquery.v3.2.1, Bootstrap4 js) -->
+<script src="~/js/libscripts.bundle.js"></script>
+<script src="/js/vendorscripts.bundle.js"></script> <!-- slimscroll, waves Scripts Plugin Js -->
+<script src="~/js/morrisscripts.bundle.js"></script>
+<script src="/js/knob.bundle.js"></script> <!-- Jquery Knob Plugin Js -->
+<script src="/js/sparkline.bundle.js"></script> <!-- Sparkline Plugin Js -->
+<script src="/js/mainscripts.bundle.js"></script>
 
-<script src="/Admin/assets/bundles/libscripts.bundle.js"></script> <!-- Lib Scripts Plugin Js ( jquery.v3.2.1, Bootstrap4 js) -->
-<script src="/Admin/assets/bundles/vendorscripts.bundle.js"></script> <!-- slimscroll, waves Scripts Plugin Js -->
-<script src="/Admin/assets/bundles/morrisscripts.bundle.js"></script><!-- Morris Plugin Js -->
-<script src="/Admin/assets/bundles/knob.bundle.js"></script> <!-- Jquery Knob Plugin Js -->
-<script src="/Admin/assets/bundles/sparkline.bundle.js"></script> <!-- Sparkline Plugin Js -->
-<script src="/Admin/assets/bundles/mainscripts.bundle.js"></script>
+<script src="~/js/farbtastic.js"></script>
+
 <script src="/Admin/assets/js/pages/index.js"></script>
 <script src="/Admin/assets/js/jquery-ui.min1.12.1.js"></script>
 <script src="/Admin/assets/js/jquery.tagsinput.min.js"></script>
 <script src="/Admin/assets/js/sweetalert2.all.min.js"></script>
 <script src="/scripts/modules.js"></script>
 <script src="/Admin/assets/js/customScript.js"></script>
-<script type="text/javascript" src="Admin/assets/js/farbtastic.js"></script>
 
 
