Repair Prtfolio JS

--- a/AryanITC.Web/Views/Shared/Components/Portfolio/Portfolio.cshtml
+++ b/AryanITC.Web/Views/Shared/Components/Portfolio/Portfolio.cshtml
@@ -3,8 +3,7 @@
     ViewData["Title"] = "Portfolio";
 }
 
- 
- 
+
 <!-- Portfolio -->
 <section id="Portfolio" class="content">
 
@@ -13,7 +12,7 @@
 
         <!-- Section Title -->
         <div class="section-title">
-            <h2>نمونه کار</h2>
+            <h2> نمونه کار </h2>
         </div>
         <!--/Section Title -->
 
@@ -26,7 +25,7 @@
     <div class="portfolio">
 
         <!-- Portfolio Filters -->
-        <div id="filters" class="    ">
+        <div id="filters" class=" sixteen columns ">
             <ul class="clearfix">
                 <li>
                     <a id="all" href="#" data-filter="*" class="active">
@@ -189,4 +188,3 @@
 
 </section>
 <!--/Portfolio -->
- 
