--- a/AryanITC.Web/Views/Shared/_Layout.cshtml
+++ b/AryanITC.Web/Views/Shared/_Layout.cshtml
@@ -4,8 +4,8 @@
 <head>
     <title>آریان ITC | @ViewData["Title"]</title>
 
-    @*<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>*@
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  
     @*Partials are Razor Views*@
     <partial name="_MetaTags" />
     <partial name="_Styles" />
