Create Portfolio Catregory

--- a/AryanITC.Web/Areas/AdminPanel/Views/Shared/_RightSideBar.cshtml
+++ b/AryanITC.Web/Areas/AdminPanel/Views/Shared/_RightSideBar.cshtml
@@ -115,7 +115,41 @@
                 </ul>
             </li>
 
-            
+            <li>
+                <a href="javascript:void(0);" class="menu-toggle">
+
+                    <span> نمونه کار ها </span>
+                </a>
+                <ul class="ml-menu">
+
+                    <li>
+                        <a asp-controller="Portfolio" asp-action="Index">
+                            <span>   لیست نمونه کارها    </span>
+                        </a>
+                    </li>
+                    
+                    <li>
+                        <a asp-controller="Portfolio" asp-action="">
+                            <span> افزدون نمونه کار  </span>
+                        </a>
+                    </li>
+                    <li>
+                        <a asp-controller="Portfolio" asp-action="Index">
+                            <span>   لیست دسته بندی نمونه کار    </span>
+                        </a>
+                    </li>
+                    
+                    <li>
+                        <a asp-controller="Portfolio" asp-action="CreatePortfolioCategory">
+                            <span> افزدون دسته بندی نمونه کار  </span>
+                        </a>
+                    </li>
+                     
+                </ul>
+                
+                
+            </li>
+
             
             
             
