Repair Portfolio Script

--- a/AryanITC.Web/Views/Shared/Components/Portfolio/Portfolio.cshtml
+++ b/AryanITC.Web/Views/Shared/Components/Portfolio/Portfolio.cshtml
@@ -2,7 +2,7 @@
 @{
     ViewData["Title"] = "Portfolio";
 }
-
+ 
 
 <!-- Portfolio -->
 <section id="Portfolio" class="content">
@@ -25,7 +25,7 @@
     <div class="portfolio">
 
         <!-- Portfolio Filters -->
-        <div id="filters" class=" sixteen columns ">
+        <div id="filters" class="sixteen columns">
             <ul class="clearfix">
                 <li>
                     <a id="all" href="#" data-filter="*" class="active">
@@ -33,7 +33,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="" href="#" data-filter=".branding">
+                    <a id="" href="#" data-filter=".branding">
                         <h5>لوگو</h5>
                     </a>
                 </li>
@@ -188,3 +188,4 @@
 
 </section>
 <!--/Portfolio -->
+ 
