--- a/AryanITC.Web/Views/Shared/Components/MainSlider/MainSlider.cshtml
+++ b/AryanITC.Web/Views/Shared/Components/MainSlider/MainSlider.cshtml
@@ -6,7 +6,7 @@
 {
     <main dir="ltr">
 
-        <div class="container-fluid">
+        <div class="container-fluid top_cont_outer">
             <div class="clearfix">
                 <div class="col-md-6 col-sm-12">
 
