--- a/AryanITC.Web/Views/Shared/_Styles.cshtml
+++ b/AryanITC.Web/Views/Shared/_Styles.cshtml
@@ -1,4 +1,4 @@
-﻿@*<link rel="icon" href="favicon.png" type="image/png">*@
+﻿<link rel="icon" href="/Images/SiteLogo/LOGO.png" type="images/png">
 <link href="~/css/bootstrap.css" rel="stylesheet" type="text/css">
 <link href="~/css/style.css" rel="stylesheet" type="text/css" asp-append-version="true">
 <link href="~/css/linecons.css" rel="stylesheet" type="text/css">
